deploy: a03ce3496d281a21c3caf434ada348a9c9594a01

--- a/begrippen.html
+++ b/begrippen.html
@@ -77,7 +77,7 @@
 <p>U opent het context menu van een item met <code>MENU</code> (menu toets) of <code>SHIFT+F10</code> of door rechts te klikken op het item.</p>
 <dl>
 <dt>Dash</dt>
-<dd><p>Onderdeel van de GNOME desktop. Hier staan je favoriete programma’s en je vindt hier de geopende programma’s.</p>
+<dd><p>Onderdeel van de GNOME desktop. Alleen zichtbaar in activiteiten en applicatie modus. Hier staan je favoriete programma’s en je vindt hier de geopende programma’s.</p>
 </dd>
 </dl>
 <figure>
