--- a/oefeningen.html
+++ b/oefeningen.html
@@ -70,7 +70,7 @@
 <li><p>Hulp openen en sluiten 4 (moeilijk)</p>
 <ol type="a">
 <li><p>Open de hulp door op <code>SUPER</code> te drukken, en dan op het reddingsboei symbool op de dash te klikken</p></li>
-<li><p>Gebruik <code>CTRL-S</code> en zoek op ‘sneltoetsen’, ga naar ‘Sneltoetsen &gt; instellen’</p>
+<li><p>Gebruik <code>CTRL+S</code> en zoek op ‘sneltoetsen’, ga naar ‘Sneltoetsen &gt; instellen’</p>
 <ol type="i">
 <li><p>Ga naar beneden naar ‘Vooraf gedefinieerde sneltoetsen’</p></li>
 <li><p>Klap ‘Systeem’ open en zoek de sneltoets voor ‘Toepassingenmenu openen’.</p></li>
@@ -79,37 +79,38 @@
 </ol></li>
 <li><p>Ga activiteiten modus in en verlaat haar onverrichter zake weer (zes keer)</p>
 <ol type="a">
-<li><p>Met het toetsenbord <code>SUPER</code></p>
+<li><p>Ga activiteiten modus in met het toetsenbord <code>SUPER</code> (driemaal)</p>
 <ol type="i">
-<li><p>Verlaten met <code>ESC</code> of <code>SUPER</code></p></li>
-<li><p>Verlaten via de knop <img src="img/activiteiten-knop.png" height="20" /></p></li>
+<li><p>Verlaat activiteiten modus met <code>ESC</code></p></li>
+<li><p>Verlaat activiteiten modus met <code>SUPER</code></p></li>
+<li><p>Verlaat activiteiten modus via de knop <img src="img/activiteiten-knop.png" height="20" /></p></li>
 </ol></li>
-<li><p>Met de muis <img src="img/activiteiten-knop.png" height="20" /></p>
+<li><p>Ga activiteiten modus in met de muis <img src="img/activiteiten-knop.png" height="20" /> (driemaal)</p>
 <ol type="i">
-<li><p>Verlaten met <code>ESC</code></p></li>
-<li><p>Verlaten via <code>SUPER</code></p></li>
-<li><p>Verlaten via de knop <img src="img/activiteiten-knop.png" height="20" /></p></li>
+<li><p>Verlaat activiteiten modus met <code>ESC</code></p></li>
+<li><p>Verlaat activiteiten modus met <code>SUPER</code></p></li>
+<li><p>Verlaat activiteiten modus met de knop <img src="img/activiteiten-knop.png" height="20" /></p></li>
 </ol></li>
 </ol></li>
 <li><p>Open de samenvatting van deze cursus:</p>
 <ol type="a">
-<li><p>Druk <code>SUPER</code> in</p></li>
-<li><p>Type <code>samenv</code> en <code>ENTER</code></p></li>
+<li><p>Druk <code>SUPER</code> in (en laat hem weer los)</p></li>
+<li><p>Type <code>samenv</code> gevolgd door <code>ENTER</code></p></li>
 <li><p>Druk <code>CTRL+W</code> om haar weer te sluiten</p></li>
 </ol></li>
 <li><p>Ga applicatie modus in en verlaat haar onverrichter zake weer (zes keer)</p>
 <ol type="a">
-<li><p>Ga binnen via <code>SUPER+A</code></p>
+<li><p>Ga applicatie modus binnen via <code>SUPER+A</code></p>
 <ol type="i">
-<li><p>Verlaten via <code>SUPER</code></p></li>
-<li><p>Verlaten via <code>ESC ESC</code></p></li>
-<li><p>Verlaten via <img src="img/activiteiten-knop.png" height="20" /></p></li>
+<li><p>Ga terug naar normale modus met <code>SUPER</code></p></li>
+<li><p>Ga terug naar normale modus met <code>ESC ESC</code></p></li>
+<li><p>Ga terug naar normale modus met <img src="img/activiteiten-knop.png" height="20" /></p></li>
 </ol></li>
-<li><p>Ga met behulp de muis binnen via <img src="img/activiteiten-knop.png" height="20" /> en <img src="img/3x3-puntjes-op-dash.png" height="20" /></p>
+<li><p>Ga met behulp de muis applicatie modus binnen door te klikken op <img src="img/activiteiten-knop.png" height="20" /> en daarna op <img src="img/3x3-puntjes-op-dash.png" height="20" /></p>
 <ol type="i">
-<li><p>Verlaten via <code>SUPER</code></p></li>
-<li><p>Verlaten via <code>ESC ESC</code></p></li>
-<li><p>Verlaten via <img src="img/activiteiten-knop.png" height="20" /></p></li>
+<li><p>Ga terug naar normale modus met <code>SUPER</code></p></li>
+<li><p>Ga terug naar normale modus met <code>ESC ESC</code></p></li>
+<li><p>Ga terug naar normale modus met <img src="img/activiteiten-knop.png" height="20" /></p></li>
 </ol></li>
 </ol></li>
 <li><p>Ga applicatie modus binnen op een wijze naar keuze en</p>
@@ -119,6 +120,7 @@
 <li><p>Ga naar gewone modus op een wijze naar keuze</p></li>
 <li><p>Sluit beide toepassingen</p>
 <ol type="i">
+<li><p>Ga naar het eerste (linker) werkblad met <code>SUPER+PageUp</code></p></li>
 <li><p><code>ALT+F4</code> om firefox te sluiten</p></li>
 <li><p><code>SUPER+PageDown</code> om naar tweede werkblad te gaan</p></li>
 <li><p><code>ALT+F4</code> om kaarten te sluiten</p></li>
@@ -144,6 +146,10 @@
 </ol></li>
 <li><p>Open met klik op <img src="img/systeem-menu-gesloten.png" height="20" /></p>
 <ol type="i">
+<li>Sluit met klik ergens buiten het menu</li>
+</ol></li>
+<li><p>Open met klik op <img src="img/systeem-menu-gesloten.png" height="20" /></p>
+<ol type="i">
 <li>Sluit met <code>ESC</code></li>
 </ol></li>
 </ol></li>
@@ -152,11 +158,13 @@
 <li><p>Start <img src="img/firefox-icon.png" width="40" /> en ga naar <code>tldp.org</code>.</p></li>
 <li><p>Open het systeemmenu</p></li>
 <li><p>Klik <img src="img/ethernet-in-uit.png" height="20" />, knop wordt grijs</p></li>
-<li><p>Sluit systeemmenu</p></li>
+<li><p>Sluit het systeemmenu</p></li>
 <li><p>Start <img src="img/firefox-icon.png" width="40" /> en ga naar <code>debian.org</code>, dit zal niet gaan</p></li>
+<li><p>Open het systeemmenu</p></li>
 <li><p>Klik <img src="img/ethernet-in-uit-grijs.png" height="20" />, knop krijgt weer kleur</p></li>
 <li><p>Sluit systeemmenu</p></li>
 <li><p>Ga naar <img src="img/firefox-icon.png" width="40" /> en herlaad de pagina met <code>F5</code></p></li>
+<li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
 </ol></li>
 <li><p>Afmelden op twee manieren</p>
 <ol type="a">
@@ -213,7 +221,7 @@
 <li><p>Sneltoetsen toevoegen. Open sneltoetsen in de Instellingen door:</p>
 <ol type="a">
 <li><p><code>SUPER snelt ENTER</code></p></li>
-<li><p>Klik op “Sneltoetsen weergeven en aanpassen”</p></li>
+<li><p>Klik op “Sneltoetsen bekijken en aanpassen”</p></li>
 <li><p>Ken onder de afdeling “Starters” <code>SUPER+E</code> aan “Persoonlijke map”</p></li>
 <li><p>Ken onder de afdeling “Starters” <code>SUPER+C</code> aan “Rekenmachine starten”</p></li>
 <li><p>Ken onder de afdeling “Starters” <code>SUPER+I</code> aan Instellingen</p></li>
@@ -232,13 +240,13 @@
 </ol></li>
 <li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening <em>(Hint: Afdeling “Vensters”)</em>.</p>
 <ol type="a">
-<li><p>Wat is de toets voor maximaliseren?</p></li>
-<li><p>Wat is de toets voor herstellen?</p></li>
+<li><p>Wat is de toets voor “Venster maximaliseren”?</p></li>
+<li><p>Wat is de toets voor “Venster herstellen”?</p></li>
 </ol></li>
 <li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening. Gebruik nu het vergrootglas bovenaan het venster om te zoeken.</p>
 <ol type="a">
-<li><p>Wat is de toets voor “Toepassingenmenu openen”?</p></li>
-<li><p>Wat is de toets voor “Afmelden”?</p></li>
+<li><p>Wat is de toets voor “Toepassingenmenu openen”? Type <code>toepassingenmenu</code> in het tekstvak naast het vergrootglas en kijk in de zoekresultaten voor het antwoord</p></li>
+<li><p>Wat is de toets voor “Afmelden”? Type <code>afmelden</code> in het tekstvak naast het vergrootglas en kijk in de zoekresultaten voor het antwoord</p></li>
 </ol></li>
 <li><p>Open en sluit terminal 1</p>
 <ol type="a">
@@ -1134,6 +1142,13 @@
 <li><p>Selecteer in het linkerpaneel “Privacy”</p></li>
 <li><p>Selecteer in het linkerpaneel “Scherm”</p></li>
 <li><p>Zet aan de rechterzijde de schakelaar “Automatische schermvergrendeling” uit (de schakelaar wordt dan grijs).</p></li>
+<li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Deactiveer “Snelhoek” optie. Deze optie maakt dat u activiteiten modus ingaat of verlaat als de muis in linker bovenhoek van het scherm komt.</p>
+<ul>
+<li><p>Open instellingen met <code>SUPER+I</code></p></li>
+<li><p>Selecteer in het linkerpaneel “Multitasken”</p></li>
+<li><p>Schakel onder het kopje “Algemeen” de “Snelhoek” optie uit</p></li>
 <li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Zet nachtlicht aan via instellingen</p>
