deploy: d6300104e585fddf34b729eb21d559d31290bfd5

--- a/firefox.html
+++ b/firefox.html
@@ -18,7 +18,7 @@
 <p>Link openen op nieuw tabblad</p>
 </li>
 <li>
-<p>Essentiële extensies</p>
+<p>Enkele extensies</p>
 </li>
 <li>
 <p>Hulp over Firefox</p>
@@ -229,7 +229,7 @@
 <p><img src="img/firefox-bladwijzermap-maken-slepen.gif" alt="" style="width:1000px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="22" data-theme="gaia" style="--theme:gaia;">
-<h4 id="aanbevolen-extensies-installeren">Aanbevolen extensies installeren</h4>
+<h4 id="extensies-installeren">Extensies installeren</h4>
 
 <ul>
 <li>
