--- a/index.html
+++ b/index.html
@@ -26,16 +26,50 @@
 <!-- ## Linux beginners cursus
 ### GNOME op Debian 12
 ![](img/debian-logo.png){height=290px} -->
+<h2 id="thuispagina">Thuispagina</h2>
+<p>De thuispagina van Linux beginners cursus bevindt zich op het volgende URL: <a href="https://github.com/slspeek/linux-beginners-cursus"><code>https://github.com/slspeek/linux-beginners-cursus</code></a>.</p>
 <h2 id="lesmateriaal">Lesmateriaal</h2>
-<ol type="1">
-<li><p><a href="https://github.com/slspeek/linux-beginners-cursus">Thuispagina</a></p></li>
-<li><p>Presentatie (<a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/presentatie.zip">download presentatie voor offline gebruik</a>)</p></li>
-<li><p><a href="samenvatting.html">Samenvatting</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">PDF versie</a></p></li>
-<li><p><a href="oefeningen.html">Oefeningen</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">PDF versie</a></p></li>
-<li><p><a href="begrippen.html">Begrippenlijst</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">PDF versie</a></p></li>
-<li><p><a href="https://github.com/slspeek/debian-gnome-sneltoetsen/releases/latest/download/debian-gnome-sneltoetsen.pdf">Sneltoetsen kaart</a></p></li>
-<li><p><a href="verder-leren.html">Verder leren</a> <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/verder-leren.pdf">PDF versie</a></p></li>
-</ol>
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th>Online versie</th>
+<th>Printbare/Offline versie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Presentaties</td>
+<td><a href="#presentaties">HTML versie</a></td>
+<td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/presentatie.zip">Zipbestand</a></td>
+</tr>
+<tr class="even">
+<td>Samenvatting</td>
+<td><a href="samenvatting.html">HMTL versie</a></td>
+<td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">Printbare versie</a></td>
+</tr>
+<tr class="odd">
+<td>Oefeningen</td>
+<td><a href="oefeningen.html">HMTL versie</a></td>
+<td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">Printbare versie</a></td>
+</tr>
+<tr class="even">
+<td>Begrippenlijst</td>
+<td><a href="begrippen.html">HMTL versie</a></td>
+<td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">Printbare versie</a></td>
+</tr>
+<tr class="odd">
+<td>Sneltoetsen kaart</td>
+<td></td>
+<td><a href="https://github.com/slspeek/debian-gnome-sneltoetsen/releases/latest/download/debian-gnome-sneltoetsen.pdf">Printbare versie</a></td>
+</tr>
+<tr class="even">
+<td>Verder leren</td>
+<td><a href="verder-leren.html">HTML versie</a></td>
+<td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/verder-leren.pdf">Printbare versie</a></td>
+</tr>
+</tbody>
+</table>
 <h2 id="presentaties">Presentaties</h2>
 <ol type="1">
 <li><p><a href="inleiding.html">Inleiding</a></p></li>
