--- a/inleiding.html
+++ b/inleiding.html
@@ -192,6 +192,9 @@ gelicenseerd onder de GPL</p>
 <p>Kosteloos</p>
 </li>
 <li>
+<p>Draait goed op oudere hardware</p>
+</li>
+<li>
 <p>Eenvoudige installatie van toepassingen</p>
 </li>
 <li>
