--- a/oefeningen.html
+++ b/oefeningen.html
@@ -13,6 +13,7 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
+  <link rel="stylesheet" href="css/custom.css" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -395,7 +396,9 @@
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>Ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code>.</p></li>
-<li><p>Scroll omlaag en ga via de link naar de presentatie van de cursus.</p></li>
+<li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
+<li><p>Klik op de link van de HTML versie (tweede kolom) van “Presentaties”</p></li>
+<li><p>Blader door enkele presentaties heen, nu weet u waar u het lesmateriaal online kunt vinden</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
@@ -409,8 +412,8 @@
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>Ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
-<li><p>Scroll naar “Onderdelen”</p></li>
-<li><p>Open de Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
+<li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
+<li><p>Open de HTML versie (tweede kolom) van Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
 <li><p>Gebruik <code>CTRL+TAB</code> om de twee nieuwe pagina’s te bekijken</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
@@ -433,8 +436,8 @@
 <ul>
 <li>Maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</li>
 </ul></li>
-<li><p>Scroll naar beneden naar de README naar “Onderdelen”</p></li>
-<li><p>Klik op de link “Presentatie”</p></li>
+<li><p>Scroll naar beneden naar de README naar het kopje “Lesmateriaal”</p></li>
+<li><p>Klik op de link van de HTML versie van “Presentaties” (tweede kolom)</p></li>
 <li><p>Maak een bladwijzer door op <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> aan de rechterzijde te klikken</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
