--- a/samenvatting.html
+++ b/samenvatting.html
@@ -13,6 +13,7 @@
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
   </style>
+  <link rel="stylesheet" href="css/custom.css" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -89,6 +90,7 @@
 <h2 id="voordelen-van-vrije-software">Voordelen van vrije software</h2>
 <ul>
 <li>Kosteloos</li>
+<li>Draait goed op oudere computers</li>
 <li>Eenvoudige installatie van toepassingen</li>
 <li>Geen reclame of marketing in het systeem</li>
 <li>Veranderingen aan software die een belangrijk deel van de gebruikers niet aanstaan zal leiden tot een afsplitsing die hen wel behaagd</li>
@@ -340,7 +342,7 @@
 <li><p>Via slepen op de bladwijzerbalk</p></li>
 </ul></li>
 </ul></li>
-<li><p>Aanbevolen extensies installeren</p>
+<li><p>Extensies installeren</p>
 <p><!-- - [*Adblocker for Youtube*](https://addons.mozilla.org/nl/firefox/addon/adblock-for-youtube/?utm_source=addons.mozilla.org&utm_medium=referral&utm_content=search) --></p>
 <ul>
 <li><p><a href="https://addons.mozilla.org/nl/firefox/addon/adblocker-ultimate/?utm_source=addons.mozilla.org&amp;utm_medium=referral&amp;utm_content=search"><em>Adblocker Ultimate</em></a></p></li>
@@ -425,7 +427,7 @@
 <li><strong>N.B.</strong> dit kan niet ongedaan worden gemaakt</li>
 </ul></li>
 <li><p>Ga naar de “Prullenbak” in de bestandsbeheerder en kies “Prullenbak legen” uit het actiemenu</p>
-<p><img src="img/bestanden-prullenbak-legen.png" /></p></li>
+<p><img src="img/bestanden-prullenbak-legen.png" width="400" /></p></li>
 </ul></li>
 <li><p>Eigenschappen van bestanden en mappen</p>
 <ul>
@@ -735,7 +737,7 @@
 
 - Visual studio -->
 <h2 id="standaardtoepassingen">Standaardtoepassingen</h2>
-<p><img src="img/standaardtoepassingen.png" /></p>
+<p><img src="img/standaardtoepassingen.png" width="400" /></p>
 <h3 id="standaardtoepassing-per-bestandstype">Standaardtoepassing per bestandstype</h3>
 <ul>
 <li><p>Context menu -&gt; “Openen met”</p></li>
@@ -748,7 +750,7 @@
 <img src="img/bestanden-dialoogvenster-openen-met.png" width="200" alt="" /><figcaption>Dialoogvenster “Openen met”</figcaption>
 </figure>
 <h2 id="opstarttoepassingen"><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstarttoepassingen</em></a></h2>
-<p><img src="img/opstarttoepassingen.png" /></p>
+<p><img src="img/opstarttoepassingen.png" width="400" /></p>
 <ul>
 <li><p>Open Afstellingen (<code>SUPER+SHIFT+I</code> )</p></li>
 <li><p>“Opstarttoepassingen”</p></li>
