deploy: ea6fd5021b18df2eebea23e55a9cb240260b3b02

--- a/begrippen.html
+++ b/begrippen.html
@@ -113,6 +113,9 @@
 <dt>GUI</dt>
 <dd><p>Graphical user interface.</p>
 </dd>
+<dt>Hamburgermenu</dt>
+<dd><p>Het hamburgermenu <img src="img/firefox-hamburgermenu.png" /> geeft in een toepassing toegang tot de menu’s van een toepassing en bevindt zich meestal rechtsbovenin het venster.</p>
+</dd>
 <dt>Linux Documentation Project</dt>
 <dd><p>Documentatie (voor gevorderden) over je dingen op Linux voor elkaar krijgt, de zogeheten <em>Howtos</em>. Website <a href="https://tldp.org">tldp.org</a> (afkorting van <strong>The Linux Documentation Project</strong>).</p>
 </dd>
@@ -121,7 +124,7 @@
 </dd>
 </dl>
 <figure>
-<img src="img/menu-key.jpeg" alt="" /><figcaption>Menu key</figcaption>
+<img src="img/menu-key.jpeg" alt="" /><figcaption>Menu toets</figcaption>
 </figure>
 <dl>
 <dt>Notificatie venster</dt>
@@ -135,6 +138,16 @@
 <dt>Open source software</dt>
 <dd><p>Software met de broncode erbij. In tegenstelling tot gesloten software kan en mag een programmeur zien wat de software doet.</p>
 </dd>
+<dt>Pad</dt>
+<dd><p>Aanduiding van bestands of map locatie in termen van bovenliggende mappen. Absolute paden beginnen met een <code>/</code> en relatieve paden niet. Voorbeelden:</p>
+</dd>
+</dl>
+<ul>
+<li><p><code>Documenten/Geschiedenis</code> is de map waar je komt door vanuit de huidige map de map <code>Documenten</code> in te gaan en dan de map <code>Geschiedenis</code> in te gaan. Merk op dat dit een relatief pad is omdat het niet met <code>/</code> begint.</p></li>
+<li><p><code>/usr/bin</code> is een absoluut pad waar je komt door vanuit <code>/</code> de map <code>usr</code> in te gaan en dan de map <code>bin</code> in te gaan.</p></li>
+<li><p><code>/home/tux/Documenten</code> is het absolute pad van de <code>Documenten</code> map in de thuismap van gebruiker <code>tux</code>.</p></li>
+</ul>
+<dl>
 <dt>Programma</dt>
 <dd><p>zie toepassing.</p>
 </dd>
@@ -160,6 +173,14 @@
 <dt>Thuismap</dt>
 <dd><p>De gebruikers map. Hier worden documenten en afbeeldingen opgeslagen. De gebruiker van wie de thuismap is kan hier zelf mappen aanmaken. Bijvoorbeeld <code>/home/tux</code>. Zie <a href="https://nl.wikipedia.org/wiki/Homedirectory">online-documentatie</a>.</p>
 </dd>
+<dt>Titelbalk</dt>
+<dd><p>De balk aan de bovenkant van een venster, met rechts het <img src="img/kruisje-in-titelbalk-van-toepassing.png" /> om het venster te sluiten.</p>
+</dd>
+</dl>
+<figure>
+<img src="img/titelbalk-rekenmachine.png" alt="" /><figcaption>Titelbalk van de rekenmachine</figcaption>
+</figure>
+<dl>
 <dt>Toepassing</dt>
 <dd><p>Een stuk software dat een bepaalde functionaliteit biedt. Bijvoorbeeld:</p>
 </dd>
