--- a/oefeningen.html
+++ b/oefeningen.html
@@ -383,8 +383,8 @@
 <li>Noem twee manieren waarop dit sluiten van beide vensters in één keer had gekunt (er zijn drie manieren)</li>
 </ol></li>
 </ol></li>
-<li><p>Som manieren waarop een toepassing, waaraan een sneltoets is toegekend, maar niet op de dash staat, kan worden gestart (vier manieren)</p></li>
-<li><p>Som manieren waarop een toepassing, waaraan een sneltoets is toegekend en op de dash staat, kan worden gestart (vijf manieren)</p></li>
+<li><p>Som manieren op waarop een toepassing, waaraan een sneltoets is toegekend, maar niet op de dash staat, kan worden gestart (vier manieren)</p></li>
+<li><p>Som manieren op waarop een toepassing, waaraan een sneltoets is toegekend en op de dash staat, kan worden gestart (vijf manieren)</p></li>
 <li><p>Op welke wijzen kan een extra venster worden geopend van toepassingen (die extra vensters toestaan)? (vier manieren)</p></li>
 <li><p>Wat is de toetscombinatie waarmee een venster wordt gesloten?</p></li>
 <li><p>Wat is een gangbare toetscombinatie waarmee een toepassing wordt afgesloten?</p></li>
@@ -432,10 +432,8 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p>
-<ul>
-<li>Maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</li>
-</ul></li>
+<li><p>Ga met behulp van de bladwijzer naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
+<li><p>Maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</p></li>
 <li><p>Scroll naar beneden naar de README naar het kopje “Lesmateriaal”</p></li>
 <li><p>Klik op de link van de HTML versie van “Presentaties” (tweede kolom)</p></li>
 <li><p>Maak een bladwijzer door op <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> aan de rechterzijde te klikken</p></li>
@@ -443,13 +441,14 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de “Presentatie” (“Overzicht Linux beginners cursus”) van de cursus</p></li>
-<li><p>Klik met op “Samenvatting”</p></li>
+<li><p>Ga met behulp van de bladwijzer naar de “Presentaties” (“Overzicht Linux beginners cursus”) van de cursus</p></li>
+<li><p>Klik op de HTML versie “Samenvatting” onder het kopje “Lesmateriaal”</p></li>
 <li><p>Maak een bladwijzer door <img src="img/firefox-slotje.png" width="30" /> naar de bladwijzerbalk te slepen</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
+<li><p>Als de bladwijzerbalk niet zichtbaar is maakt u hem zichtbaar met <code>SHIFT+CTRL+B</code></p></li>
 <li><p>Open het context menu (rechtsklikken) van de bladwijzerbalk en kies “Map toevoegen …” en maak een map “cursus” aan</p></li>
 <li><p>Sleep de drie bladwijzers over de cursus naar deze map</p></li>
 <li><p>En orden ze zodanig dat het resultaat er zo uitziet: <img src="img/firefox-bladwijzer-map-cursus-3-items.png" height="100" /></p></li>
@@ -457,9 +456,9 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de “Presentatie” (“Overzicht Linux beginners cursus”) van de cursus</p></li>
-<li><p>Ga naar de tweede pagina</p></li>
-<li><p>Klik met <code>CTRL</code> ingedrukt op “Oefeningen” en “Begrippenlijst”</p></li>
+<li><p>Ga met behulp van de bladwijzer naar de “Presentaties” (“Overzicht Linux beginners cursus”) van de cursus</p></li>
+<li><p>Ga naar het kopje “Lesmateriaal”</p></li>
+<li><p>Klik met <code>CTRL</code> ingedrukt op de HTML versies van “Oefeningen” en “Begrippenlijst”</p></li>
 <li><p>Breng met behulp van <code>CTRL+TAB</code> de tabbladen 1 voor 1 naar voren en sleep <img src="img/firefox-slotje.png" width="30" /> naar de map “cursus” op de bladwijzerbalk</p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code></p>
@@ -467,22 +466,29 @@
 <li><p>Ga naar <code>kernel.org</code></p></li>
 <li><p>Maak een bladwijzer met <code>CTRL+D</code></p></li>
 <li><p>Ga naar “Bladwijzers beheren” met <code>CTRL+SHIFT+O</code></p></li>
-<li><p>Verwijder de bladwijzer naar <code>kernel.org</code></p></li>
+<li><p>Selecteer in het linkerpaneel “Bladwijzerbalk”</p></li>
+<li><p>Verwijder de bladwijzer naar <code>kernel.org</code>, door rechts te klikken op de <code>kernel.org</code> bladwijzer en “Bladwijzer verwijderen” te kiezen</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Noem drie manieren waarop je een bladwijzer in Firefox kunt maken (er zijn er vier).</p></li>
 <li><p>Noem drie manieren waarop je een bladwijzer in Firefox kunt verwijderen.</p></li>
 <li><p>Start Firefox met <code>SUPER+1</code></p>
 <ul>
-<li><p>Ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu rechtbovenin.</p></li>
+<li><p>Ga naar ‘Add-ons en thema’s’ met <code>CTRL+SHIFT+A</code> of via het hamburger menu <img src="img/firefox-hamburgermenu.png" /> rechtbovenin.</p></li>
 <li><p>Selecteer aan de linkerzijde van de pagina ‘Extensies’</p></li>
-<li><p>Type in het zoekvak <code>Adblocker Ultimate</code> en installeer deze extensie</p></li>
+<li><p>Type in het zoekvak <code>Adblocker Ultimate</code> en installeer deze extensie:</p>
+<ul>
+<li><p>Kies het bovenste zoekresultaat</p></li>
+<li><p>Klik op de blauwe knop met opschrift “Toevoegen aan Firefox”</p></li>
+<li><p>Klik in popup die rechtbovenin verschijnt op “Toevoegen”</p></li>
+<li><p>Klik in de volgende popup die rechtbovenin verschijnt op “Oké”</p></li>
+</ul></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus/samenvatting.html</code>.</p></li>
-<li><p>Scroll omlaag naar “Internet browser: Firefox” en dan naar “Aanbevolen extensies installeren”, klik op de link van “I don’t care about cookies”</p></li>
+<li><p>Scroll omlaag naar “Internet browser: Firefox” en dan naar “Extensies installeren”, klik op de link van “I don’t care about cookies”</p></li>
 <li><p>Klik op de knop “Toevoegen aan Firefox”</p></li>
 <li><p>Ga na met <code>CTRL+SHIFT+A</code> (Add-ons) of de extensie is geïnstalleerd</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
@@ -497,7 +503,7 @@
 </ol>
 <h2 id="bestanden">Bestanden</h2>
 <ol type="1">
-<li><p>Waar staat de thuismap van gebruiker tux?</p></li>
+<li><p>Wat is het pad van de thuismap van gebruiker tux?</p></li>
 <li><p>Wat is het map scheidingsteken op Linux?</p></li>
 <li><p>Onder welke map is een aangekoppelde USB-stick terug te vinden?</p></li>
 <li><p>Waarvoor hebt u een bestandsbeheerder nodig (noem vier redenen)?</p></li>
@@ -513,14 +519,14 @@
 <li><p>Wisselen tussen raster- en lijstweergave.</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Wissel naar de andere weergave met <img src="img/knop-icon-weergave.png" width="20" /> of <img src="img/knop-lijst-weergave.png" width="20" /></p></li>
+<li><p>Wissel naar de andere weergave met één van de knoppen rechtsbovenin: <img src="img/knop-icon-weergave.png" width="20" /> of <img src="img/knop-lijst-weergave.png" width="20" /></p></li>
 <li><p>Keer terug naar eerste weergave</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>CTRL+W</code></p></li>
 </ul></li>
 <li><p>Verborgen bestanden tonen</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Toon de verborgen bestanden met behulp van het menu met de drie puntjes boven elkaar rechts in de adresbalk <img src="img/persoonlijke-map-menu.png" height="20" /></p></li>
+<li><p>Toon de verborgen bestanden met behulp van het hamburgermenu <img src="img/firefox-hamburgermenu.png" height="20" />, het menuitem heet “Verborgen bestanden tonen”</p></li>
 <li><p>Wat voor soort namen hebben de verborgen bestanden? Ziet u een patroon? (Wissel eventueel meerdere malen met <code>CTRL+H</code>)</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>CTRL+W</code></p></li>
 </ul></li>
@@ -578,8 +584,8 @@
 <li><p>Een schermafdruk verplaatsen</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Navigeer naar <code>Afbeeldingen/Schermafdrukken</code></p></li>
 <li><p>Maak een schermafdruk met <code>ALT+PrintScreen</code></p></li>
+<li><p>Navigeer naar <code>Afbeeldingen/Schermafdrukken</code></p></li>
 <li><p>Knip deze afbeelding via haar context menu</p></li>
 <li><p>Navigeer naar <code>Documenten</code></p></li>
 <li><p>Plak de schermafdruk via het context menu</p></li>
@@ -671,7 +677,13 @@
 <ul>
 <li>Gebruik <code>CTRL+K</code> en <code>CTRL+↑</code>, <code>CTRL+↓</code></li>
 </ul></li>
-<li><p>Print de pagina <a href="https://nl.wikipedia.org/wiki/Protohistorie"><code>https://nl.wikipedia.org/wiki/Protohistorie</code></a> naar pdf en sla deze op in de map <code>werkstuk-protohistorie</code> gebruikmakend van de bladwijzer.</p></li>
+<li><p>Druk de pagina <a href="https://nl.wikipedia.org/wiki/Protohistorie"><code>https://nl.wikipedia.org/wiki/Protohistorie</code></a> af naar pdf en sla deze op in de map <code>werkstuk-protohistorie</code> gebruikmakend van de bladwijzer.</p>
+<ul>
+<li><p>Kies uit het hamburgermenu <img src="img/firefox-hamburgermenu.png" /> “Afdrukken…”</p></li>
+<li><p>Zet het “Uitvoerapparaat” in het rechterpaneel op “Opslaan als PDF” en druk op “Opslaan”</p></li>
+<li><p>Kies in het linkerpaneel van het bestandsvenster de bladwijzer <code>werkstuk-protohistorie</code></p></li>
+<li><p>Klik op de blauwe knop “Opslaan” rechtsbovenin</p></li>
+</ul></li>
 <li><p>Sluit Firefox</p></li>
 <li><p>Open opnieuw bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Zoek met <code>CTRL+F</code> naar het woord <code>periode</code>, het document <code>Protohistorie - Wikipedia.pdf</code> uit de map <code>werkstuk-protohistorie</code> moet zich onder de zoekresultaten moeten bevinden.</p></li>
@@ -727,7 +739,7 @@
 <li><p>Open en sluit het sneltoetsen overzicht in de bestandsbeheerder</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Gebruik <code>CTRL+?</code> om het sneltoetsen venster te openen</p></li>
+<li><p>Gebruik <code>SHIFT+CTRL+?</code> om het sneltoetsen venster te openen</p></li>
 <li><p>Gebruikt <code>PageDown</code> om tweemaal verder te bladeren</p></li>
 <li><p>Sluit het met <code>ESC</code></p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
