--- a/begrippen.html
+++ b/begrippen.html
@@ -53,6 +53,9 @@
 <dt>Applicatie modus</dt>
 <dd><p>Onderdeel van de activiteiten modus waarin alle geïnstalleerde programma’s worden getoond. U komt in deze modus door <code>SUPER+A</code> in te drukken.</p>
 </dd>
+<dt>Bestandsbeheerder</dt>
+<dd><p>De toepassing “Betanden” <img src="img/bestanden-icon.png" /> waarwee u bestandsbeheer (openen, kopiëren, verplaatsen en verwijderen van bestanden) kunt uitvoeren. Onder Windows heet deze toepassing “Verkenner”.</p>
+</dd>
 <dt>Besturingssysteem</dt>
 <dd><p>Verzameling programma’s die de hardware aanstuurt en zorgt dat toepassingen kunnen draaien.</p>
 </dd>
